# swagger.json
@@ -53,21 +53,38 @@
         }
       }
     },
-    "/gaugesData/populate": {
+    "/gaugesData/readings": {
       "get": {
-        "description": "Gets a reading from all Gauges."
-      },
-      "responses": {
-        "200": {
-          "description": "A JSON array of Gauge reading Objects.",
-          "content": "application/json",
-          "schema": {
-            "type": "object",
-            "properties": {
-              "id": {
-                "type": "integer",
-                "format": "int64",
-                "example": 4
+        "description": "Gets Gauge Readings from all Gauges.",
+        "responses": {
+          "200": {
+            "description": "A JSON array of gauge readings",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "siteCode": {
+                        "type": "string",
+                        "example": 542472
+                      },
+                      "gaugeReading": {
+                        "type": "float",
+                        "example": 1.63
+                      },
+                      "timestamp": {
+                        "type": "string",
+                        "example": "2019-10-15T00:30:00.000Z"
+                      },
+                      "variableName": {
+                        "type": "string",
+                        "example": "Streamflow, ft&#179;/s\""
+                      }
+                    }
+                  }
+                }
               }
             }
           }
